flicker bug fix

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,6 +6,10 @@ html, body{
   font-family: 'Ubuntu', sans-serif !important;
 }
 
+svg > g > g:last-child {
+  pointer-events: none;
+}
+
 .main-content-wrapper{
   width:100%;
   height:100%;
